Fix unreadable reel drawer

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -101,6 +101,9 @@ nav .disc li { display: list-item; }
   background: #fafafa;
   box-shadow: 2px 2px 2px rgba(0,0,0, 0.35);
 }
+.drawer .reels ul.disc li { line-height: 25px; }
+.drawer.open, .drawer.open a { color: #000; }
+.drawer.open a:hover { color: #fff; }
 .drawer.open .reels { display: block; }
 .drawer.open #open-reel {
   background: #fafafa;
